--- a/mobile-test.html
+++ b/mobile-test.html
@@ -51,97 +51,274 @@
     <main class="container" id="menus">
 
         <!-- Menu Grid -->
-        <section>
-            <h2>Grand Menu</h2>
+        <!-- 🥇 BURGERS -->
+        <section class="category-section" id="menu-burgers">
+            <div class="category-header">🥇 BURGERS</div>
             <div class="menu-grid">
-                <!-- Item 1 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/signature-burger.png" alt="BUN BUN Signature Burger"
+                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="BUN BUN CLASSIC"
                             loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">BUN BUN Signature Burger</h3>
-                        <p class="menu-description">和牛パティ2枚と特製スパイシーソースの看板バーガー。圧倒的満足感。</p>
-                        <p class="menu-price">¥680〜</p>
-                        <ul class="menu-tags">
-                            <li>No.1</li>
-                            <li>Wagyu</li>
-                        </ul>
-                    </div>
-                </article>
-
-                <!-- Item 2 -->
-                <article class="menu-card" data-menu-card>
-                    <div class="menu-thumb">
-                        <img src="assets/miryu-burger/golden-fries.png" alt="Golden Crispy Fries" loading="lazy">
-                    </div>
-                    <div class="menu-content">
-                        <h3 class="menu-title">Golden Crispy Fries</h3>
-                        <p class="menu-description">毎朝カットする新鮮なジャガイモを二度揚げ。カリカリホクホクの食感。</p>
-                        <p class="menu-price">¥280〜</p>
+                        <h3 class="menu-title">BUN BUN CLASSIC</h3>
+                        <p class="menu-description">王道のクラシックバーガー。ジューシーなパティと新鮮野菜のハーモニー。</p>
+                        <p class="menu-price">¥580</p>
+                        <div class="menu-calories">550 kcal</div>
                         <ul class="menu-tags">
                             <li>Classic</li>
                         </ul>
                     </div>
                 </article>
-
-                <!-- Item 3 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/green-shake.png" alt="Green Refresh Shake" loading="lazy">
+                        <img src="assets/bun-bun-burger/double_bun_bun_burger_1765726621078.png" alt="DOUBLE BUN BUN"
+                            loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">Green Refresh Shake</h3>
-                        <p class="menu-description">小松菜、リンゴ、キウイのヘルシーシェイク。バーガーとの相性抜群。</p>
-                        <p class="menu-price">¥350〜</p>
+                        <h3 class="menu-title">DOUBLE BUN BUN</h3>
+                        <p class="menu-description">パティ2枚の圧倒的ボリューム。肉汁が溢れ出す至高の一品。</p>
+                        <p class="menu-price">¥880</p>
+                        <div class="menu-calories">950 kcal</div>
                         <ul class="menu-tags">
-                            <li>Healthy</li>
+                            <li>Volume</li>
                         </ul>
                     </div>
                 </article>
-
-                <!-- Item 4 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/spicy-chicken.png" alt="Spicy Chicken Fillet" loading="lazy">
+                        <img src="assets/bun-bun-burger/double_bun_bun_burger_1765726621078.png"
+                            alt="CHEESE BUN EXPLOSION" loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">Spicy Chicken Fillet</h3>
-                        <p class="menu-description">サクサク衣のチキンにハバネロパウダー。辛いもの好きには堪らない。</p>
-                        <p class="menu-price">¥420〜</p>
+                        <h3 class="menu-title">CHEESE BUN EXPLOSION</h3>
+                        <p class="menu-description">3種類のチーズがとろけ出す、チーズ好きのための濃厚バーガー。</p>
+                        <p class="menu-price">¥920</p>
+                        <div class="menu-calories">1020 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Cheese</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="SMOKY BUN BACON"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">SMOKY BUN BACON</h3>
+                        <p class="menu-description">厚切りベーコンのスモーキーな香りが食欲をそそる。</p>
+                        <p class="menu-price">¥780</p>
+                        <div class="menu-calories">720 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Bacon</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="TERIYAKI BUN"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">TERIYAKI BUN</h3>
+                        <p class="menu-description">JAPAN限定。甘辛い特製テリヤキソースがクセになる。</p>
+                        <p class="menu-price">¥620</p>
+                        <div class="menu-calories">580 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Japan</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="SPICY BUN FIRE"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">SPICY BUN FIRE🔥</h3>
+                        <p class="menu-description">ハラペーニョたっぷり。辛さが後を引く大人の味。</p>
+                        <p class="menu-price">¥680</p>
+                        <div class="menu-calories">610 kcal</div>
                         <ul class="menu-tags">
                             <li>Hot</li>
                         </ul>
                     </div>
                 </article>
+            </div>
+        </section>
 
-                <!-- Item 5 -->
+        <!-- 🥬 HEALTHY -->
+        <section class="category-section" id="menu-healthy">
+            <div class="category-header">🥬 HEALTHY</div>
+            <div class="menu-grid">
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/onion-rings.png" alt="Royal Onion Rings" loading="lazy">
+                        <img src="assets/bun-bun-burger/avo_bun_green_burger_1765726669393.png" alt="AVO BUN GREEN"
+                            loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">Royal Onion Rings</h3>
-                        <p class="menu-description">甘みの強いタマネギを使用した、衣厚めの贅沢オニオンリング。</p>
-                        <p class="menu-price">¥320〜</p>
+                        <h3 class="menu-title">AVO BUN GREEN</h3>
+                        <p class="menu-description">新鮮なアボカドを贅沢に使用。クリーミーでヘルシー。</p>
+                        <p class="menu-price">¥750</p>
+                        <div class="menu-calories">480 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Healthy</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/avo_bun_green_burger_1765726669393.png" alt="VEGGIE BUN GARDEN"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">VEGGIE BUN GARDEN</h3>
+                        <p class="menu-description">7種の野菜をサンド。シャキシャキ食感が楽しめる。</p>
+                        <p class="menu-price">¥680</p>
+                        <div class="menu-calories">350 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Veggie</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/avo_bun_green_burger_1765726669393.png" alt="SOY BUN TOKYO"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">SOY BUN TOKYO</h3>
+                        <p class="menu-description">100%植物性パティ使用。お肉のような満足感。</p>
+                        <p class="menu-price">¥720</p>
+                        <div class="menu-calories">420 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Soy</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- 🍟 SIDES -->
+        <section class="category-section" id="menu-sides">
+            <div class="category-header">🍟 SIDES</div>
+            <div class="menu-grid">
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_fries_1765726688593.png" alt="BUN BUN FRIES"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">BUN BUN FRIES</h3>
+                        <p class="menu-description">カリッと揚げたて、BUN BUN自慢のフライドポテト。</p>
+                        <p class="menu-price">¥280</p>
+                        <div class="menu-calories">320 kcal</div>
                         <ul class="menu-tags">
                             <li>Side</li>
                         </ul>
                     </div>
                 </article>
-
-                <!-- Item 6 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/cola-zero.png" alt="BUN BUN Cola Zero" loading="lazy">
+                        <img src="assets/bun-bun-burger/bun_bun_fries_1765726688593.png" alt="CHEESE BUN FRIES"
+                            loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">BUN BUN Cola Zero</h3>
-                        <p class="menu-description">カロリーゼロでも味は濃厚。オリジナルスパイス配合のクラフトコーラ。</p>
-                        <p class="menu-price">¥250〜</p>
+                        <h3 class="menu-title">CHEESE BUN FRIES</h3>
+                        <p class="menu-description">とろ〜りチーズソースをたっぷりかけた悪魔的ポテト。</p>
+                        <p class="menu-price">¥380</p>
+                        <div class="menu-calories">450 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Kote-Kote</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/onion_bun_rings_1765726701652.png" alt="ONION BUN RINGS"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">ONION BUN RINGS</h3>
+                        <p class="menu-description">サクサク衣と甘い玉ねぎの最強コンビ。</p>
+                        <p class="menu-price">¥350</p>
+                        <div class="menu-calories">380 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Crispy</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- 🥤 DRINKS -->
+        <section class="category-section" id="menu-drinks">
+            <div class="category-header">🥤 DRINKS</div>
+            <div class="menu-grid">
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_shake_trio_1765726640912.png" alt="BUN BUN SHAKE"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">BUN BUN SHAKE</h3>
+                        <p class="menu-description">VANILLA / CHOCO / STRAWBERRY。濃厚リッチな味わい。</p>
+                        <p class="menu-price">¥450</p>
+                        <div class="menu-calories">400 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Sweet</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/miryu-burger/cola-zero.png" alt="COLA BUN" loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">COLA BUN</h3>
+                        <p class="menu-description">バーガーにはやっぱりこれ。シュワっと爽快。</p>
+                        <p class="menu-price">¥250</p>
+                        <div class="menu-calories">140 kcal</div>
                         <ul class="menu-tags">
                             <li>Drink</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- 🎯 SETS -->
+        <section class="category-section" id="menu-sets">
+            <div class="category-header">🎯 SETS</div>
+            <div class="menu-grid">
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="BUN BUN SET"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">BUN BUN SET</h3>
+                        <p class="menu-description">お好きなバーガー＋ポテト＋ドリンクの王道セット。</p>
+                        <p class="menu-price">+¥400</p>
+                        <div class="menu-calories">850 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Deal</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/bun_bun_slider_trio_1765727254153.png" alt="HAPPY BUN SET"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">HAPPY BUN SET</h3>
+                        <p class="menu-description">スライダー3種＋オニオンリング＋シェイク。幸せ満腹セット。</p>
+                        <p class="menu-price">¥1,480</p>
+                        <div class="menu-calories">1250 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Happy</li>
                         </ul>
                     </div>
                 </article>
